--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "dependencies": {
     "angular": "~1.2.6",
-    "momentjs": "~2.5.1"
+    "momentjs": "~2.5.1",
+    "html5shiv": "~3.7.0",
+    "modernizr": "2.7.2",
+    "gridle": "~1.1.0"
   }
 }
