--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "grunt-groundskeeper": "~0.1.6",
     "grunt-h5bp-cachebuster": "~0.1.0",
     "grunt-contrib-concat": "~0.3.0"
+  },
+  "dependencies": {
+    "express": "3.x"
   }
 }
