--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "BtnFrontendSandbox",
   "version": "0.1.0",
-  "repository" : {
-    "type" : "git",
-    "url" : "git@github.com:Bitnoise/BtnFrontendSandbox.git"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Bitnoise/BtnFrontendSandbox.git"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -18,6 +18,7 @@
     "grunt-contrib-concat": "~0.3.0"
   },
   "dependencies": {
-    "express": "3.x"
+    "githubhook": "~0.5.1",
+    "node-trello": "~0.1.5"
   }
 }
