--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "dependencies": {
     "githubhook": "~0.5.1",
-    "node-trello": "~0.1.5"
+    "node-trello": "~0.1.5",
+    "sockjs": "~0.3.8",
+    "rbytes": "~1.0.0",
+    "restify": "~2.7.0"
   }
 }
