--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "html5shiv": "~3.7.0",
     "modernizr": "2.7.2",
     "gridle": "~1.1.0",
-    "ngDialog": "~0.1.7"
+    "ngDialog": "~0.1.7",
+    "angular-route": "~1.2.18"
   }
 }
